# TeamSpeakTelegramBot

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 20260316_0001_initial.py
app/: bootstrap.py  main.py
app/bot/: factory.py
app/bot/filters/: __init__.py  admin.py
app/bot/handlers/: __init__.py  admin.py  start.py  user.py
app/bot/keyboards/: __init__.py  admin.py  common.py  stats.py
app/bot/middlewares/: __init__.py  auth.py  db.py  rate_limit.py
app/core/: config.py  constants.py  enums.py  logging.py  rate_limiter.py  security.py
app/db/: base.py  session.py
app/db/models/: __init__.py  admin.py  notification.py  role.py  ts3.py  tts.py  user.py
app/db/repositories/: __init__.py  admin.py  notifications.py  stats.py  ts3.py  tts.py  users.py
app/services/: __init__.py  audit_service.py  container.py  notification_service.py  permission_service.py  runtime_config_service.py  stats_service.py  user_service.py
app/services/teamspeak/: __init__.py  adapter.py  dto.py  query_codec.py  service.py
app/services/tts/: __init__.py  providers.py  service.py
app/utils/: charts.py  csv_export.py  formatting.py
app/workers/: __init__.py  monitor.py  reports.py  tts_worker.py
docker/: bot.Dockerfile  entrypoint.sh  voice_worker_example.py
scripts/: bootstrap_admin.py
tests/: conftest.py  test_notification_repository.py  test_permission_service.py  test_query_codec.py  test_rate_limiter.py  test_stats_utils.py
(+5 files in other folders)
