[build-system]
requires = ["hatchling>=1.26.3"]
build-backend = "hatchling.build"

[project]
name = "ts3-telegram-bot"
version = "0.1.0"
description = "Production-like MVP Telegram-бота для TeamSpeak 3"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.16.0,<4.0.0",
  "SQLAlchemy>=2.0.35,<3.0.0",
  "alembic>=1.14.0,<2.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "redis>=5.1.1,<6.0.0",
  "pydantic>=2.10.3,<3.0.0",
  "pydantic-settings>=2.6.1,<3.0.0",
  "structlog>=24.4.0,<26.0.0",
  "httpx>=0.28.1,<1.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "gTTS>=2.5.4,<3.0.0",
  "python-dateutil>=2.9.0.post0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4,<9.0.0",
  "pytest-asyncio>=0.24.0,<1.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
  "ruff>=0.8.2,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
